--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -31,6 +31,7 @@
 		 <link href="http://production.mkem.sk/domains/metronic_assets/assets/pages/css/login.min.css" rel="stylesheet" type="text/css" />
          <link rel="stylesheet" href="{$basePath}/css/style.css">
 		 <script src="http://production.mkem.sk/domains/metronic_assets/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 		  
         <!-- END THEME LAYOUT STYLES -->
         <link rel="shortcut icon" href="{$basePath}/css/favicon.ico" /> </head>
@@ -127,6 +128,11 @@
                                             <i class="fa fa-tasks"></i><span class="title">Spravovať zamestnancov</span>
                                         </a>
                             </li>   
+                            <li class="nav-item  ">
+                                        <a href="{link Employee:ageGraph}" class="nav-link ">
+                                            <i class="fa fa-tasks"></i><span class="title">Grafický prehľad veku</span>
+                                        </a>
+                            </li> 
                           
                                 </ul>
                           
